@@ -537,9 +537,9 @@
  min-width:var(--queue-minwidth);
  max-width:100vw;
  width:var(--pq-unpinned-width);
- border-top:1px solid var(--sub-toolbar-border-color);
- border-left:1px solid var(--sub-toolbar-border-color);
- border-bottom:1px solid var(--sub-toolbar-border-color);
+ border-top:1px solid var(--popup-border-color);
+ border-left:1px solid var(--popup-border-color);
+ border-bottom:1px solid var(--popup-border-color);
  border-radius:8px 0  0 8px;
  box-shadow:var(--menu-dlg-shadow);
  overflow: hidden;
